--- a/css/bloom.css
+++ b/css/bloom.css
@@ -218,6 +218,9 @@ footer a {
 .slider-home {
     position: absolute;
 }
+.slider-video {
+    height:230px;
+}
 @media (max-width: 992px) {
     .blurb-home {
         top: 124px;
@@ -235,6 +238,10 @@ footer a {
     .slider-home {
         position: relative;
         top: 100px;
+    }
+    .slider-video {
+        height: unset;
+        width: 100%;
     }
     .firstblock {
         margin-top: 100px;
