--- a/css/bloom.css
+++ b/css/bloom.css
@@ -239,12 +239,19 @@ dark {
     position: absolute;
 }
 .slider-video {
-    height:230px;
+    width: 500px;
+    height: 281px;
 }
 .lumps {
     -webkit-column-count: 3; /* Chrome, Safari, Opera */
     -moz-column-count: 3; /* Firefox */
     column-count: 3;
+}
+@media (max-width: 1200px) {
+    .slider-video {
+        width: 400px;
+        height: 225px;
+    }
 }
 @media (max-width: 992px) {
     .header-blurb {
@@ -274,8 +281,8 @@ dark {
         top: 100px;
     }
     .slider-video {
-        height: unset;
         width: 100%;
+        height: 320px;
     }
     .firstblock {
         margin-top: 100px;
