--- a/css/bloom.css
+++ b/css/bloom.css
@@ -163,6 +163,14 @@ body {
         font-size: 190%;
     }
 }
+@media (max-width: 460px) {
+    .text000 {
+        font-size: 140%;
+    }
+    .text0000 {
+        font-size: 160%;
+    }
+}
 .thin {
     font-weight: 100;
 }
@@ -234,6 +242,11 @@ dark {
     position: absolute;
     right: 0px;
     top: 300px;
+    background-color: rgba(255, 255, 255, .95);
+}
+.blurb-solutions {
+    position: absolute;
+    top: 300px;
 }
 .slider-home {
     position: absolute;
@@ -241,6 +254,12 @@ dark {
 .slider-video {
     width: 500px;
     height: 281px;
+}
+.header-shade {
+    background-color:rgba(51,88,123,.78);
+    width:100%;
+    height:190px;
+    position:absolute;
 }
 .lumps {
     -webkit-column-count: 3; /* Chrome, Safari, Opera */
@@ -253,6 +272,11 @@ dark {
         height: 225px;
     }
 }
+@media (max-width: 1024px) {
+    .header-shade {
+        height: 0px;
+    }
+}
 @media (max-width: 992px) {
     .header-blurb {
         padding-left: 8%;
@@ -260,6 +284,9 @@ dark {
     }
     .blurb-home {
         top: 124px;
+    }
+    .blurb-solutions {
+        top: 320px;
     }
     .lumps {
         -webkit-column-count: 2; /* Chrome, Safari, Opera */
@@ -275,6 +302,9 @@ dark {
     .blurb-corp {
         position: relative;
         top: 100px;
+    }
+    .blurb-solutions {
+        top: 140px;
     }
     .slider-home {
         position: relative;
@@ -302,7 +332,9 @@ dark {
         padding-right: 0;
     }
 }
+@media (max-width: 460px) {
 
+}
 /* These two are a custom underline for links */
 
 span.pi-has-border {
@@ -359,6 +391,9 @@ span.pi-has-border:hover:after {
 .pad-top-50 {
     padding-top: 50px;
 }
+.pad-top-75 {
+    padding-top: 75px;
+}
 .pad-top-20 {
     padding-top: 20px;
 }
@@ -374,19 +409,26 @@ span.pi-has-border:hover:after {
 .pad-left-20 {
     padding-left: 20px;
 }
-
+@media (max-width: 992px) {
+    .pad-top-50 {
+        padding-top: 5px;
+    }
+    .pad-top-75 {
+        padding-top: 5px;
+    }
+}
 /* Adding another column width for our menu footer */
-@media (min-width:768px) {
+@media (min-width: 768px) {
     .col-9-items {
         width: 11.11111111%
     }
 }
-@media (min-width:992px) {
+@media (min-width: 992px) {
     .col-9-items {
         width: 11.11111111%
     }
 }
-@media (min-width:1200px) {
+@media (min-width: 1200px) {
     .col-9-items {
         width: 11.11111111%
     }
