--- a/css/bloom.css
+++ b/css/bloom.css
@@ -390,6 +390,9 @@ dark {
     max-height:60%;
     max-width:80%;
 }
+.blockphotos {
+    padding-bottom: 18%;
+}
 @media (max-width: 1200px) {
     .slider-video {
         width: 400px;
@@ -462,6 +465,9 @@ dark {
         -webkit-column-count: 1; /* Chrome, Safari, Opera */
         -moz-column-count: 1; /* Firefox */
         column-count: 1;
+    }
+    .blockphotos {
+        padding-bottom: 40%;
     }
     footer {
         font-size: 130%;
