--- a/css/bloom.css
+++ b/css/bloom.css
@@ -225,7 +225,7 @@ footer a {
 .white {
     color: #fff;
 }
-dark {
+.dark {
     color: #000;
 }
 .grayback {
@@ -342,6 +342,15 @@ dark {
     width: 500px;
     height: 281px;
 }
+.slider-banner {
+    height: 281px;
+}
+.owl-controls {
+    position: absolute;
+    bottom: -45px;
+    right: 0px;
+    left: 0px;
+}
 .header-shade {
     background-color:rgba(51,88,123,.78);
     width:100%;
@@ -380,9 +389,14 @@ dark {
     height:100%;
 }
 .tcell {
-    display:table-cell;
-    vertical-align:middle;
+    display: table-cell;
+    vertical-align: middle;
     text-align: center;
+}
+.text-left.tcell {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: left;
 }
 .client-logo {
     width:auto;
@@ -396,6 +410,9 @@ dark {
 @media (max-width: 1200px) {
     .slider-video {
         width: 400px;
+        height: 225px;
+    }
+    .slider-banner {
         height: 225px;
     }
 }
@@ -455,6 +472,10 @@ dark {
         top: 100px;
     }
     .slider-video {
+        width: 100%;
+        height: 320px;
+    }
+    .slider-banner {
         width: 100%;
         height: 320px;
     }
