--- a/css/bloom.css
+++ b/css/bloom.css
@@ -86,7 +86,49 @@ body {
 .stretchy {
     height: 100%;
 }
-
+.lumps {
+    -webkit-column-count: 3; /* Chrome, Safari, Opera */
+    -moz-column-count: 3; /* Firefox */
+    column-count: 3;
+}
+.square {
+    float:left;
+    position: relative;
+    width: 100%;
+    padding-bottom : 100%; /* = width for a 1:1 aspect ratio */
+    margin:1.66%;
+}
+.square-inside {
+    position:absolute;
+    height:100%; /* = 100% - 2*5% padding */
+    width:100%; /* = 100% - 2*5% padding */
+    padding: 0%;
+    
+}
+.tblock {
+    display:table;
+    width:100%;
+    height:100%;
+}
+.tcell {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+.text-left.tcell {
+    display: table-cell;
+    vertical-align: middle;
+    text-align: left;
+}
+.client-logo {
+    width:auto;
+    height:auto;
+    max-height:60%;
+    max-width:80%;
+}
+.blockphotos {
+    padding-bottom: 18%;
+}
 /* ------------------------  x y centering  */
 
 .xycenter {
@@ -142,7 +184,7 @@ body {
 .text0000 {
     font-size: 200%;
 }
-@media (max-width: 992px) {
+@media (max-width: 1024px) {
     .text-0000 {
         font-size: 50%;
     }
@@ -261,7 +303,7 @@ footer a {
 .icon0000 {
     font-size: 400%;
 }
-@media (max-width: 992px) {
+@media (max-width: 1024px) {
     .icon-0000 {
         font-size: 50%;
     }
@@ -344,6 +386,13 @@ footer a {
 }
 .slider-banner {
     height: 281px;
+    text-align: left;
+}
+.slider-banner-half {
+    height: 281px;
+}
+img .slider-banner-half {
+    padding:30px;
 }
 .owl-controls {
     position: absolute;
@@ -367,49 +416,7 @@ footer a {
     position:absolute;
     top: 0px;
 }
-.lumps {
-    -webkit-column-count: 3; /* Chrome, Safari, Opera */
-    -moz-column-count: 3; /* Firefox */
-    column-count: 3;
-}
-.square {
-    float:left;
-    position: relative;
-    width: 100%;
-    padding-bottom : 100%; /* = width for a 1:1 aspect ratio */
-    margin:1.66%;
-}
-.square-inside {
-    position:absolute;
-    height:100%; /* = 100% - 2*5% padding */
-    width:100%; /* = 100% - 2*5% padding */
-    padding: 0%;
-    
-}
-.tblock {
-    display:table;
-    width:100%;
-    height:100%;
-}
-.tcell {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: center;
-}
-.text-left.tcell {
-    display: table-cell;
-    vertical-align: middle;
-    text-align: left;
-}
-.client-logo {
-    width:auto;
-    height:auto;
-    max-height:60%;
-    max-width:80%;
-}
-.blockphotos {
-    padding-bottom: 18%;
-}
+
 @media (max-width: 1200px) {
     .slider-video {
         width: 400px;
@@ -417,14 +424,16 @@ footer a {
     }
     .slider-banner {
         height: 225px;
+        text-align: center;
+    }
+    .slider-banner-half {
+        height: 225px;
     }
 }
 @media (max-width: 1024px) {
     .header-shade {
         height: 0px;
     }
-}
-@media (max-width: 992px) {
     .header-blurb {
         padding-left: 8%;
         padding-right: 4%;
@@ -440,6 +449,16 @@ footer a {
     }
     .header-shade2 {
         height:1px;
+    }
+    .slider-banner {
+        height: 100px;
+        text-align: center;
+    }
+    .slider-banner-half {
+        height: 160px;
+    }
+    img .slider-banner-half {
+        padding:10px;
     }
     .lumps {
         -webkit-column-count: 2; /* Chrome, Safari, Opera */
@@ -457,7 +476,7 @@ footer a {
 @media (max-width: 760px) {
     .blurb-home {
         position: relative;
-        top: 100px;
+        top: 80px;
     }
     .blurb-corp {
         position: relative;
@@ -478,12 +497,16 @@ footer a {
         top: 100px;
     }
     .slider-video {
-        width: 100%;
-        height: 320px;
+        height: 222px;
     }
     .slider-banner {
-        width: 100%;
-        height: 320px;
+        height: 80px;
+    }
+    .slider-banner-half {
+        height: 150px;
+    }
+    img .slider-banner-half {
+        padding:1px;
     }
     .firstblock {
         margin-top: 100px;
@@ -506,8 +529,13 @@ footer a {
         padding-right: 0;
     }
 }
-@media (max-width: 460px) {
-
+@media (max-width: 480px) {
+    .blurb-home {
+        top: 70px;
+    }
+    .slider-home {
+        top: 80px;
+    }
 }
 /* These two are a custom underline for links */
 
@@ -608,37 +636,52 @@ span.has-border:hover:after {
     }
 }
 
+/* Modify the neko header to bump everything down if the pre-header is loaded */
+.pre-header-on-sm #content {
+    margin-top: 0px;
+}
+@media (min-width: 1024px) {
+    .pre-header-on-sm #content {
+        margin-top: 25px;
+    }
+}
+@media (min-width: 768px) and (max-width:1023px)  {
+    .pre-header-on-sm #content {
+        margin-top: 0px;
+    }
+}
 /* Modifying the neko header behavior of collapsing at mobile size */
 
 .page-header.x-large.stay {
-  height: 400px;
-  margin-top: 112px;
+  height: 500px;
+  margin-top: 100px;
 }
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width:1023px) {
   .page-header.x-large.stay {
-    height: 550px;
+    height: 600px;
+    margin-top: 25px;
+  }
+}
+@media (min-width: 1024px) {
+  .page-header.x-large.stay {
+    height: 800px;
     margin-top: 0px;
   }
 }
-@media (min-width: 992px) {
-  .page-header.x-large.stay {
-    height: 770px;
-    margin-top: 0px;
-  }
-}
+
 /* Adding another header size to neko */
 
 .page-header.xlarge {
   height: 350px;
-  margin-top: 112px;
+  margin-top: 100px;
 }
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width:1023px)  {
   .page-header.xlarge {
     height: 400px;
-    margin-top: 0px;
+    margin-top: 25px;
   }
 }
-@media (min-width: 992px) {
+@media (min-width: 1024px) {
   .page-header.xlarge {
     height: 600px;
     margin-top: 0px;
