--- a/css/bloom.css
+++ b/css/bloom.css
@@ -132,6 +132,16 @@ body {
     max-height:60%;
     max-width:80%;
 }
+.scrunch {
+    line-height: 1;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
+.scrunchy {
+    line-height: .5;
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+}
 .blockphotos {
     padding-bottom: 18%;
 }
