--- a/css/bloom.css
+++ b/css/bloom.css
@@ -294,6 +294,10 @@ footer a {
 }
 
 /* ----  Icon sizing  */
+.material-icons.aligned {
+    -webkit-transform: translateY(25%);
+    transform: translateY(25%);
+}
 
 .icon-0000 {
     font-size: 60%;
