Perchified Industries page

--- a/perch/templates/content/services.html
+++ b/perch/templates/content/services.html
@@ -17,9 +17,9 @@
                             </div>
                             <div class="col-sm-10">
                                 <p class="text0000 light"><perch:content type="text" id="title1" label="title1" size="m"/></p>
-                                <p class="text0 regular">
+                                <div class="text0 regular">
                                     <perch:content type="textarea" id="text1" label="text1" markdown="true" editor="markitup" size="m"/>
-                                </p>
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-6" data-nekoanim="fadeInUp">
@@ -29,9 +29,9 @@
                             </div>
                             <div class="col-sm-10">
                                 <p class="text0000 light"><perch:content type="text" id="title2" label="title2" size="m"/></p>
-                                <p class="text0 regular">
+                                <div class="text0 regular">
                                     <perch:content type="textarea" id="text2" label="text2" markdown="true" editor="markitup" size="m"/>
-                                </p>
+                                </div>
                             </div>
                         </div>
                     </div> <!-- / row -->
