--- a/perch/templates/content/client-quotes.html
+++ b/perch/templates/content/client-quotes.html
@@ -1,7 +1,7 @@
 <perch:repeater id="quotes" label="client quotes">
 <perch:before></perch:before>
 <div class="item">
-    <span class="text0"><perch:content type="text" id="title" label="title" size="m"/></span><br>
+    <span class="text0"><perch:content type="text" id="title" label="title" size="m"/></span><perch:if exists="title"><br></perch:if>
     <perch:content type="textarea" id="quote" label="quote" markdown="true" editor="markitup" size="m"/>
     <span class="text-00 medium">- <perch:content type="text" id="source" label="source" size="m"/></span>
 </div>
