--- a/perch/templates/content/industries.html
+++ b/perch/templates/content/industries.html
@@ -1,27 +1,30 @@
 <perch:help>
-	Industries are grouped in pairs because I didn't want to add logic to detect rows.
 </perch:help>
 <perch:repeater id="industries" label="industries">
 <perch:before></perch:before>
+<perch:every nth-child="odd">
             <section class="pt-small light-color">
                 <div class="container">
                     <div class="row">
+</perch:every>
                         <div class="col-md-6" data-nekoanim="fadeInUp">
-                            <a name="<perch:content type="text" id="anchor1" label="anchor1" size="m" help="used for link navigation"/>" class="anchor"></a>
-                            <p class="text000 light"><perch:content type="text" id="title1" label="title1" size="m"/></p>
+                            <a name="<perch:content type="text" id="anchor" label="anchor" size="m" help="used for link navigation"/>" class="anchor"></a>
+                            <p class="text000 light"><perch:content type="text" id="title" label="title" size="m"/></p>
                             <div class="text regular">
-                                <perch:content type="textarea" id="text1" label="text1" markdown="true" editor="markitup" size="m"/>
+                                <perch:content type="textarea" id="text" label="text" markdown="true" editor="markitup" size="m"/>
                             </div>
                         </div>
-                        <div class="col-md-6" data-nekoanim="fadeInUp">
-                            <a name="<perch:content type="text" id="anchor2" label="anchor2" size="m" help="used for link navigation"/>" class="anchor"></a>
-                            <p class="text000 light"><perch:content type="text" id="title2" label="title2" size="m"/></p>
-                            <div class="text regular">
-                                <perch:content type="textarea" id="text2" label="text2" markdown="true" editor="markitup" size="m"/>
-                            </div>
-                        </div>
+<perch:every nth-child="even">
                     </div> <!-- / row -->
                 </div><!-- / container -->
             </section>
+</perch:every>
+<perch:if exists="perch_item_last">
+    <perch:every nth-child="odd">
+                    </div> <!-- / row -->
+                </div><!-- / container -->
+            </section>
+    </perch:every>
+</perch:if>
 <perch:after></perch:after>
 </perch:repeater>
