Removed padding on the solution images for shorter text.

--- a/perch/templates/content/solutions.html
+++ b/perch/templates/content/solutions.html
@@ -11,7 +11,7 @@
                     <perch:content type="textarea" id="text" label="text" markdown="true" editor="markitup" size="l"/>
                 </div>
             </div>
-            <div class="col-md-5 <perch:if id="swap-push" value="col-md-push-5">col-md-pull-7</perch:if> pad-top-75 text-center" data-nekoanim="<perch:if id="swap-push" value="col-md-push-5">fadeInLeft<perch:else />fadeInRight</perch:if>" data-nekodelay="10">
+            <div class="col-md-5 <perch:if id="swap-push" value="col-md-push-5">col-md-pull-7</perch:if> text-center" data-nekoanim="<perch:if id="swap-push" value="col-md-push-5">fadeInLeft<perch:else />fadeInRight</perch:if>" data-nekodelay="10">
                 <img src="<perch:content id="image" type="image" label="image" order="1"/>" class="responsive">
             </div>
         </div>
