Corrected layout changes I couldn't see in staging

--- a/perch/templates/content/industries.html
+++ b/perch/templates/content/industries.html
@@ -2,10 +2,10 @@
 </perch:help>
 <perch:repeater id="industries" label="industries">
 <perch:before></perch:before>
-            <section class="pt-small light-color">
+            <section class="pt-medium light-color">
                 <div class="container">
                     <div class="row">
-                        <div class="col-xs-9 col-xxs-12" data-nekoanim="fadeInUp">
+                        <div class="col-xs-12 col-xxs-12" data-nekoanim="fadeInUp">
                             <a name="<perch:content type="text" id="anchor" label="anchor" size="m" help="used for link navigation"/>" class="anchor"></a>
                             <p class="text0000 light"><perch:content type="text" id="title" label="title" size="m"/></p>
                             <div class="text0 regular">
