--- a/css/bloom.css
+++ b/css/bloom.css
@@ -181,6 +181,25 @@ body {
    display:inline-block;
 }
 
+/* ------------------------  Special loading screen  */
+
+.special-loader {
+	position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #ffffff;
+    z-index: 99999;
+}
+.loader-inner {
+	width: 320px;
+	height: 200px;
+}
+
 /* ------------------------  Text and sizing  */
 
 .text-0000 {
