--- a/skelet-framework/css/app.css
+++ b/skelet-framework/css/app.css
@@ -52,6 +52,32 @@
 
 /*** Bloom css */
 
+/* ------------------------  Special loading screen  */
+
+.special-loader {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #ffffff;
+  z-index: 99999;
+}
+.fadeout {
+  transition-delay: 2s;
+  transition-property: opacity z-index;
+  opacity: 0;
+  transition-duration: 0.25s;
+  z-index: -1;
+}
+.loader-inner {
+  width: 320px;
+  height: 200px;
+}
+
 /* ------------------------  Colors  */
 
 .color-orange {
