--- a/skelet-framework/css/app.css
+++ b/skelet-framework/css/app.css
@@ -68,7 +68,7 @@
 }
 .fadeout {
   transition-delay: 2s;
-  transition-property: opacity z-index;
+  transition-property: opacity, z-index;
   opacity: 0;
   transition-duration: 0.25s;
   z-index: -1;
