More switching around of content and making Who we are the new home

--- a/perch/templates/content/home-how-blocks.html
+++ b/perch/templates/content/home-how-blocks.html
@@ -1,4 +1,4 @@
-            <div class="section <perch:content type="text" id="section_theme" label="Section theme" />">
+            <div class="section tabpage <perch:content type="text" id="section_theme" label="Section theme" />" id="tabpage_<perch:content id="perch_item_index" />">
                 <div class="contents text-start">
                     <h3 class="nostyle"><span class="text0000 medium"><perch:content type="text" id="title" label="Title" /></span></h3>
                     <div class="text0 regular pad-bottom-16">
