--- a/perch/templates/content/work-companies.html
+++ b/perch/templates/content/work-companies.html
@@ -1,7 +1,7 @@
-                            <p class="text0000 bold color-orange text-center">
+                            <p class="text0000 medium">
                             	<perch:content type="text" id="title" label="Title" />
                             </p>
-                            <p class="text0 text-center pad-bottom-64">
+                            <p class="text0 pad-bottom-64">
                             	<perch:content type="text" id="tagline" label="Tagline" />
                             </p>
                             <x-grid columns="3" columns-s="1" as=center ji=center>
