--- a/perch/templates/content/home-quotes.html
+++ b/perch/templates/content/home-quotes.html
@@ -1,4 +1,4 @@
-<div class="contents">
+<div class="contents pad-bottom-48">
 	<div class="splide" data-splide='{"type":"loop","perPage":1,"autoplay":true,"interval":7000,"drag":true,"arrows":false}' role="group" aria-label="Quotes carousel">
 	 <div class="splide__track">
 	     <ul class="splide__list">
