--- a/skelet-framework/css/app.css
+++ b/skelet-framework/css/app.css
@@ -1,4 +1,3 @@
-/*** app.css */
 
 /*** CSS variables */
 :root {
@@ -13,7 +12,7 @@
   --selectionBg: hsla(21, 79%, 54%, 1);
   --selectionText: var(--colorBlack);
 
-  --fontFamily: "Roboto", var(--fontFallback);
+  --fontFamily: "Open Sans", var(--fontFallback);
   --fontFamilyVar: "Roboto Flex", var(--fontFallback);
   --fontFamilyScript: "Caveat", cursive;
 
