Finished making How We Help blocks show and hide with the pillars

--- a/perch/templates/content/home-how-we-help.html
+++ b/perch/templates/content/home-how-we-help.html
@@ -1,26 +1,26 @@
                     <div class="text0 pad-bottom-32">
                     	<perch:content type="textarea" markdown="true" size="m" id="body" label="Body" />
                     </div>
-                    <x-grid columns="4" columns-m="2" columns-s="2">
-                        <x-col class="text-center tabHeader_1">
+                    <x-grid columns="4" columns-m="2" columns-s="2" class="tabSet text-center">
+                        <x-col class="tabHeader" id="tabHeader_1">
                             <div class="icon-box large theme-teal inline-block">
                                 <img src="<perch:content type="image" bucket="icons" id="box1_icon" label="Box 1 icon" />" class="inline-block">
                             </div>
                             <div class="text0"><perch:content type="text" id="box1_text" label="Box 1 text" /></div>
                         </x-col>
-                        <x-col class="text-center tabHeader_2">
+                        <x-col class="tabHeader" id="tabHeader_2">
                             <div class="icon-box large theme-blue inline-block">
                                 <img src="<perch:content type="image" bucket="icons" id="box2_icon" label="Box 2 icon" />" class="inline-block">
                             </div>
                             <div class="text0"><perch:content type="text" id="box2_text" label="Box 2 text" /></div>
                         </x-col>
-                        <x-col class="text-center tabHeader_3">
+                        <x-col class="tabHeader" id="tabHeader_3">
                             <div class="icon-box large theme-yellow inline-block">
                                 <img src="<perch:content type="image" bucket="icons" id="box3_icon" label="Box 3 icon" />" class="inline-block">
                             </div>
                             <div class="text0"><perch:content type="text" id="box3_text" label="Box 3 text" /></div>
                         </x-col>
-                        <x-col class="text-center tabHeader_4">
+                        <x-col class="tabHeader" id="tabHeader_4">
                             <div class="icon-box large theme-orange inline-block">
                                 <img src="<perch:content type="image" bucket="icons" id="box4_icon" label="Box 4 icon" />" class="inline-block">
                             </div>
